# win-way

./: .gitignore  Cargo.toml  README.md  build_bidi.txt  build_debug.txt  build_error.txt  build_error2.txt  build_log.txt  build_wayland.txt  build_winway.txt  check_error.txt  pixel-test.py  test_debug.py  wayland_check.txt  wsl-proxy.py
.github/workflows/: build-windows.yml
scripts/: wsl-connect.sh
src/: error.rs  frame.rs  lib.rs  main.rs  protocol.rs  renderer.rs  server.rs
src/wayland/: client.rs  compositor.rs  display.rs  mod.rs  object.rs  registry.rs  shm.rs  wire.rs  xdg_shell.rs
