[package]
name = "win-way"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
winit = { version = "0.30", features = ["rwh_06"] }
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync", "io-util", "time", "process"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
glow = "0.16"  # OpenGL wrapper for easier GL calls
num_cpus = "1"

# NOTE: Using local smithay-universal with Windows support
[dependencies.smithay]
path = "../smithay-universal"
default-features = false
features = ["backend_winit_windows", "backend_wgl"]

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific deps if needed
